@@ -153,43 +153,3 @@ ScaleContinuous <- proto(Scale, funEnvir = globalenv(), {
   }
 })
 
-# Set x limits
-# Convenience function to set the limits of the x axis.
-# 
-# Works by creating a new continuous scale, so will only work for 
-# continuous variables.
-# 
-# @arguments lower limit
-# @arguments upper limit
-# @keyword hplot
-#X qplot(mpg, wt, data=mtcars) + xlim(15, 20)
-xlim <- function(min=NA, max=NA) {
-  scale_x_continuous(limits = c(min, max))
-}
-
-# Set y limits
-# Convenience function to set the limits of the y axis.
-# 
-# Works by creating a new continuous scale, so will only work for 
-# continuous variables.
-# 
-# @arguments lower limit
-# @arguments upper limit
-# @keyword hplot
-#X qplot(mpg, wt, data=mtcars) + ylim(15, 20)
-ylim <- function(min=NA, max=NA) {
-  scale_y_continuous(limits = c(min, max))
-}
-
-# Set z limits
-# Convenience function to set the limits of the z axis.
-# 
-# Works by creating a new continuous scale, so will only work for 
-# continuous variables.
-# 
-# @arguments lower limit
-# @arguments upper limit
-# @keyword hplot
-zlim <- function(min=NA, max=NA) {
-  scale_z_continuous(limits = c(min, max))
-}
